As a user I can log in and log out [Delivers #174747198]
