# docs/swagger.yaml
@@ -44,6 +44,57 @@ paths:
                     error: Username already exists
           description: Username already exists
       summary: Registers a new user
+  /sessions:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/postSessionsRequest'
+        required: true
+      tags:
+        - sessions
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/postSessionResponse'
+          description: User logged in successfully
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
+              examples:
+                Invalid username/password:
+                  value:
+                    error: Invalid username/password
+          description: Invalid username/password
+      summary: Logs the user in
+    delete:
+      tags:
+        - sessions
+      responses:
+        '204':
+          description: User logged out successfully
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
+              examples:
+                Missing Authorization header:
+                  value:
+                    error: Missing Authorization header
+                Invalid token:
+                  value:
+                    error: Invalid  token
+          description: Unauthorized
+      security:
+        -
+          Token: []
+      summary: Logs the user out
 components:
   schemas:
     postUsersRequest:
@@ -125,7 +176,7 @@ components:
         currency: EUR
         number: abc5775a9d8c866de6cf89f70fd8b5b1771
     errorResponse:
-      title: errorObject
+      title: errorResponse
       description: ''
       type: object
       properties:
@@ -133,3 +184,34 @@ components:
           type: string
       example:
         error: Error message
+    postSessionsRequest:
+      title: POST /sessions request
+      description: ''
+      type: object
+      properties:
+        username:
+          description: A valid username
+          type: string
+        password:
+          description: The password associated with given username
+          type: string
+      example:
+        username: lasu
+        password: kurimuri
+    postSessionResponse:
+      title: POST /sessions response
+      description: ''
+      type: object
+      properties:
+        token:
+          description: >-
+            A session token which needs to be sent back to server in Authorization header with
+            every request (Authorization: Bearer <token>)
+          type: string
+      example:
+        token: 5f7f55f8f703183820ec2ce6
+  securitySchemes:
+    Token:
+      scheme: bearer
+      type: http
+      description: A Bearer scheme
